--- a/index.html
+++ b/index.html
@@ -6,6 +6,35 @@
     <title>meredithmatthews.com</title>
 </head>
 <body>
-    Hello world!
+    <hgroup>
+        <h1>Meredith Matthews</h1>
+        <h2>Front-end Antihero</h2>
+        <h2>Internet Duct Tape</h2>
+        <h2>The Mallet That Pounds Square JS Into Round Browsers</h2>
+        <h2>Furiously Full-Stack Front-End</h2>
+    </hgroup>
+
+    <nav>
+        <ul>
+            <li>thing</li>
+            <li>thing</li>
+            <li>thing</li>
+        </ul>
+        <aside>
+            <ul>
+                <li>link</li>
+                <li>link</li>
+                <li>link</li>
+            </ul>
+        </aside>
+    </nav>
+
+    <main>
+        <article>
+            <p>This is my website.</p>
+        </article>
+    </main>
+
+    <footer>This is the footer.</footer>
 </body>
 </html>
