--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <hgroup>
         <h1>Meredith Matthews</h1>
         <h2>Front-end Antihero</h2>
-        <h2>Internet Duct Tape</h2>
-        <h2>The Mallet That Pounds Square JS Into Round Browsers</h2>
-        <h2>Furiously Full-Stack Front-End</h2>
     </hgroup>
 
     <nav>
         <ul>
-            <li>thing</li>
-            <li>thing</li>
-            <li>thing</li>
+            <li>developer axioms</li>
+            <li>articles</li>
+            <li>games</li>
+            <li>websites</li>
+            <li>the people who inspire me</li>
         </ul>
         <aside>
             <ul>
-                <li>link</li>
-                <li>link</li>
-                <li>link</li>
+                <li>codepen</li>
+                <li>github</li>
+                <li>itch.io</li>
+                <li>twitter</li>
+                <li>linkedin</li>
+                <li>soundcloud</li>
+                <li>zazzle</li>
             </ul>
         </aside>
     </nav>
@@ -32,6 +35,14 @@
     <main>
         <article>
             <p>This is my website.</p>
+        </article>
+        <article>
+            <p>Axioms are good, actually.</p>
+            <ul>
+                <li>axiom</li>
+                <li>axiom</li>
+                <li>axiom</li>
+            </ul>
         </article>
     </main>
 
