changed my mind, I want to keep that stuff for now

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <hgroup>
         <h1>Meredith Matthews</h1>
         <h2>Front-end Antihero</h2>
+        <h2>Internet Duct Tape</h2>
+        <h2>The Mallet That Pounds Square JS Into Round Browsers</h2>
+        <h2>Furiously Full-Stack Front-End</h2>
+        <h2>Will Refactor Javascript Into CSS Mercilessly</h2>
     </hgroup>
 
     <nav>
