--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>meredithmatthews.com</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Coustard&family=Montserrat&display=swap" rel="stylesheet"> 
 </head>
+<style>
+    body {
+        font-family: 'Montserrat', sans-serif;
+    }
+    h1, h2, h3, h4, h5, h6 {
+        font-family: 'Coustard', serif;
+    }
+</style>
 <body>
     <hgroup>
         <h1>Meredith Matthews</h1>
