--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         </ul>
         <aside>
             <ul>
-                <li>codepen</li>
-                <li>github</li>
-                <li>itch.io</li>
-                <li>twitter</li>
-                <li>linkedin</li>
-                <li>soundcloud</li>
-                <li>zazzle</li>
+                <li><a href="https://codepen.io/meredithmatthews">codepen.io</a></li>
+                <li><a href="https://github.com/mmatthews1981">github</a></li>
+                <li><a href="https://braindouche.itch.io/">itch.io</a></li>
+                <li><a href="https://www.linkedin.com/in/meredithmatthews/">linkedin</a></li>
+                <li><a href="https://soundcloud.com/braindouche">soundcloud</a></li>
+                <li><a href="https://www.zazzle.com/store/braindouche">zazzle</a></li>
+                <li><a href="https://www.thegamecrafter.com/games/deck">the game crafter</a></li>
             </ul>
         </aside>
     </nav>
