--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         font-family: 'Coustard', serif;
     }
 
-h2 {
+/* h2 {
 
 	height: 0;
     opacity: 0;
@@ -35,18 +35,18 @@ h2.is-visible {
 	display: block;
 	height: auto;
   opacity: 1;
-}
+} */
 
 </style>
 
 <body>
     <hgroup>
         <h1>Meredith Matthews</h1>
-        <h2>Front-end Antihero</h2>
-        <h2>Internet Duct Tape</h2>
+        <h2>Front-End Antihero</h2>
+        <!-- <h2>Internet Duct Tape</h2>
         <h2>The Mallet That Pounds Square JS Into Round Browsers</h2>
         <h2>Furiously Full-Stack Front-End</h2>
-        <h2>Will Refactor Javascript Into CSS Mercilessly</h2>
+        <h2>Will Refactor Javascript Into CSS Mercilessly</h2> -->
     </hgroup>
 
     <nav>
@@ -86,7 +86,7 @@ h2.is-visible {
 
     <footer>This is the footer.</footer>
 
-    <script>
+    <!-- <script>
 
         var subtitles = document.getElementsByTagName('h2');
         var counter = 0;
@@ -102,7 +102,7 @@ h2.is-visible {
         }, 5000)
 
 
-    </script>
+    </script> -->
 </body>
 
 </html>
