--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@ h2.is-visible {
         </article>
         <article>
             <h3>Articles</h3>
+            <h4>Reactive jQuery for Spaghetti-fied Legacy Codebases (or When You Can’t Have Nice Things) </h4>
+            <p>Published July 2020 on <a href="https://css-tricks.com/reactive-jquery-for-spaghetti-fied-legacy-codebases-or-when-you-cant-have-nice-things/">css-tricks.com</a></p>
         </article>
         <article>
             <h3>Games</h3>
