--- a/index.html
+++ b/index.html
@@ -115,6 +115,12 @@ h2.is-visible {
             <h3>Articles</h3>
             <h4>Reactive jQuery for Spaghetti-fied Legacy Codebases (or When You Can’t Have Nice Things) </h4>
             <p>Published July 2020 on <a href="https://css-tricks.com/reactive-jquery-for-spaghetti-fied-legacy-codebases-or-when-you-cant-have-nice-things/">css-tricks.com</a></p>
+            <h4>Keep Track of Invisible Work with a Developer's Diary</h4>
+            <p>draft ready</p>
+            <h4>Advanced Journaling Techniques For Developers: Keeping A Commonplace</h4>
+            <p>draft 0</p>
+            <h4>Developer Axioms</h4>
+            <p>draft 0</p>
         </article>
         <article>
             <h3>Games</h3>
