added more stuff

--- a/index.html
+++ b/index.html
@@ -127,13 +127,19 @@ h2.is-visible {
         </article>
         <article>
             <h3>Websites</h3>
+            <h4>PHP Does Not Suck</h4>
+            <p><a href="http://phpdoesnotsuck.com/">click here!</a></p>
+            <h4>Chick Lit Cover Generator</h4>
+            <p><a href="http://chicklitcovergenerator.com/">click here!</a></p>
         </article>
         <article>
             <h3>People, Places and Things That I Like</h3>
+            <h4>Netlify</h4>
+            <p>This site it published on Netlify! After so many years dealing with more or less control of Apache and Nginx servers, it's incredibly liberating to just automate all of that away, code up a nice simple site, hit publish and go. Yes, I'm one of those static-site hipsters underneath, and Netlify lets me indulge in that.</p>
         </article>
     </main>
 
-    <footer>This is the footer.</footer>
+    <footer>This is the footer. Copyright 2021, as if you care.</footer>
 
     <!-- <script>
 
