added more stuff

--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@ h2.is-visible {
             <h3>People, Places and Things That I Like</h3>
             <h4>Netlify</h4>
             <p>This site it published on Netlify! After so many years dealing with more or less control of Apache and Nginx servers, it's incredibly liberating to just automate all of that away, code up a nice simple site, hit publish and go. Yes, I'm one of those static-site hipsters underneath, and Netlify lets me indulge in that.</p>
+            <h4>@sonniesedge</h4>
+            <p><a a href="https://www.sonniesedge.net/">Charlie Owen</a> is a front-end badass.</p>
         </article>
     </main>
 
