--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@ h2.is-visible {
 <body>
     <hgroup>
         <h1>Meredith Matthews</h1>
-        <h2>Front-End Antihero</h2>
-        <!-- <h2>Internet Duct Tape</h2>
+        <h2>Will Delete Your Code</h2>
+        <!-- <h2>Front-End Antihero</h2>
+        <h2>Internet Duct Tape</h2>
         <h2>The Mallet That Pounds Square JS Into Round Browsers</h2>
         <h2>Furiously Full-Stack Front-End</h2>
         <h2>Will Refactor Javascript Into CSS Mercilessly</h2> -->
@@ -72,7 +73,7 @@ h2.is-visible {
         <aside>
             <ul>
                 <li><a href="https://codepen.io/meredithmatthews" target="_blank">codepen.io</a></li>
-                <li><a href="https://github.com/mmatthews1981" target="_blank">github</a></li>
+                <li><a href="https://github.com/mmatthews1981" target="_blank" rel="me">github</a></li>
                 <li><a href="https://braindouche.itch.io/" target="_blank">itch.io</a></li>
                 <li><a href="https://www.linkedin.com/in/meredithmatthews/" target="_blank">linkedin</a></li>
                 <li><a href="https://soundcloud.com/braindouche" target="_blank">soundcloud</a></li>
