--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ h2.is-visible {
         </ul>
         <aside>
             <ul>
-                <li><a href="https://codepen.io/meredithmatthews" target="_blank">codepen.io</a></li>
+                <li><a href="https://codepen.io/meredithmatthews" target="_blank" rel="me">codepen.io</a></li>
                 <li><a href="https://github.com/mmatthews1981" target="_blank" rel="me">github</a></li>
                 <li><a href="https://braindouche.itch.io/" target="_blank">itch.io</a></li>
                 <li><a href="https://www.linkedin.com/in/meredithmatthews/" target="_blank">linkedin</a></li>
