--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ h2.is-visible {
                 <li><a href="https://www.linkedin.com/in/meredithmatthews/" target="_blank">linkedin</a></li>
                 <li><a href="https://soundcloud.com/braindouche" target="_blank">soundcloud</a></li>
                 <li><a href="https://www.zazzle.com/store/braindouche" target="_blank">zazzle</a></li>
-                <li><a href="https://www.thegamecrafter.com/games/deck" target="_blank">the game crafter</a></li>
+                <li><a href="https://www.thegamecrafter.com/designers/mer" target="_blank" rel="me">the game crafter</a></li>
             </ul>
         </aside>
     </nav>
