--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ h2.is-visible {
                 <li><a href="https://github.com/mmatthews1981" target="_blank" rel="me">github</a></li>
                 <li><a href="https://braindouche.itch.io/" target="_blank">itch.io</a></li>
                 <li><a href="https://www.linkedin.com/in/meredithmatthews/" target="_blank">linkedin</a></li>
-                <li><a href="https://soundcloud.com/braindouche" target="_blank">soundcloud</a></li>
+                <li><a href="https://soundcloud.com/braindouche" target="_blank" rel="me">soundcloud</a></li>
                 <li><a href="https://www.zazzle.com/store/braindouche" target="_blank">zazzle</a></li>
                 <li><a href="https://www.thegamecrafter.com/designers/mer" target="_blank" rel="me">the game crafter</a></li>
             </ul>
