--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Coustard&family=Montserrat&display=swap" rel="stylesheet">
+
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <style>
     body {
@@ -161,6 +163,7 @@ h2.is-visible {
 
 
     </script> -->
+    
 </body>
 
 </html>
